# beleza

./: CMakeLists.txt  README
cmake/: cygwin.cmake  ios.cmake  macosx.cmake  resources.cmake
include/: Beleza.h  Console.h  Fonts.h  Image.h  LuaVM.h  Music.h  SDL2.h  Starfield3D.h  Window.h
scripts/: ios-cmake.sh  ios-sdl2.sh  sdl2.sh
share/: hello.lua  script.lua
src/: Beleza.cpp  Console.cpp  Fonts.cpp  Image.cpp  LuaVM.cpp  Main.cpp  Music.cpp  Starfield3D.cpp  Window.cpp
